# local-code-assistant-desktop

./: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build-installers.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/features/chat/: ChatPanel.tsx
src/features/editor/: CommandReviewPanel.tsx  DiffReviewPanel.tsx  EditorPane.tsx  FilePlanReviewPanel.tsx
src/features/projects/: ProjectExplorer.tsx
src/features/settings/: SettingsModal.tsx
src/hooks/: useAssistant.ts
src/lib/: constants.ts  editor.ts  languages.ts  utils.ts
src/services/: fileSystem.ts
src/services/ollama/: client.ts
src/services/openrouter/: client.ts
src/services/project/: analysis.ts
src/services/prompts/: templates.ts
src/services/storage/: commands.ts
src/services/terminal/: commands.ts
src/stores/: chatStore.ts  editorStore.ts  projectStore.ts  settingsStore.ts
src/types/: index.ts
src/ui/: App.tsx
src/ui/layout/: TopToolbar.tsx
