[package]
name = "local-code-assistant"
version = "0.1.0"
description = "A local-first cross-platform AI coding assistant"
authors = ["Local Code Assistant"]
license = "MIT"
edition = "2021"
rust-version = "1.78"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
pdf-extract = "0.7"
quick-xml = "0.38"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
walkdir = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
